--- a/website/templates/tutor_login.html
+++ b/website/templates/tutor_login.html
@@ -1,6 +1,7 @@
 {% block content %}
 <h2>Login</h2>
 <form method="POST" action="{{ url_for('main.tutor_login') }}">
+    {{ form.hidden_tag() }}
     <div class="input-field">
         {{ form.email.label }}
         {{ form.email(class="validate") }}
