--- a/website/templates/create_student.html
+++ b/website/templates/create_student.html
@@ -1,4 +1,5 @@
-<body>
+{% extends "base.html" %}
+{% block content %}
 <h2 style="text-align: center">Create student</h2>
 <div style="display: flex; flex-flow: wrap row; justify-content: space-around">
     <table>
@@ -50,4 +51,4 @@
         </div>
     </form>
 </div>
-</body>
+{% endblock %}
