--- a/website/templates/tutor_home.html
+++ b/website/templates/tutor_home.html
@@ -1,44 +1,43 @@
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-<header>
-    <h1>Welcome tutor!</h1>
-    <div style="display: flex; flex-flow: row wrap;">
-        <script >
-            let ctx
-        </script>
-        {% for student_id, object in student_grades.items() %}
-            <div style="width: 40rem;border: 3px solid black; margin: 10px">
-                <div style="text-align: center">
-                    <a href="{{url_for('main.edit_student', student_id=student_id)}}">
-                        <h3>{{object.student_name}}</h3>
-                    </a>
-                </div>
-                <canvas id="chart-{{student_id}}">
-                    <script>
-                        console.log('module names: ', {{object.module_names | safe}})
-                        console.log('module grades: ', {{object.module_grades}})
-                        ctx = document.getElementById('chart-{{student_id}}')
-                        new Chart(ctx, {
-                            type: 'bar',
-                            data: {
-                                labels: {{object.module_names | safe}},
-                                datasets: [{
-                                    label: 'grade',
-                                    data: {{object.module_grades}},
-                                    tension: 0
-                                }]
-                            },
-                            options: {
-                                scales: {
-                                    y: {
-                                        max: 100
-                                    }
+{% extends "base.html" %}
+{% block content %}
+<h1 style="text-align: center">Welcome {{tutor_name}}!</h1>
+<div class="d-flex flex-wrap justify-content-center">
+    <script >
+        let ctx
+    </script>
+    {% for student_id, object in student_grades.items() %}
+        <div class="card" style="width: 40rem;border: 3px solid grey; margin: 10px; padding: 5px">
+            <div style="text-align: center">
+                <a href="{{url_for('main.edit_student', student_id=student_id)}}">
+                    <h3>{{object.student_name}}</h3>
+                </a>
+            </div>
+            <canvas id="chart-{{student_id}}">
+                <script>
+                    console.log('module names: ', {{object.module_names | safe}})
+                    console.log('module grades: ', {{object.module_grades}})
+                    ctx = document.getElementById('chart-{{student_id}}')
+                    new Chart(ctx, {
+                        type: 'bar',
+                        data: {
+                            labels: {{object.module_names | safe}},
+                            datasets: [{
+                                label: 'grade',
+                                data: {{object.module_grades}},
+                                tension: 0
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                y: {
+                                    max: 100
                                 }
                             }
-                        })
-                    </script>
-                </canvas>
-            </div>
-        {% endfor %}
-    </div>
-</header>
+                        }
+                    })
+                </script>
+            </canvas>
+        </div>
+    {% endfor %}
+</div>
+{% endblock %}
