Allow admin to create tutors and admins

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" style="margin-bottom: 1rem">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ url_for('main.home') }}">Grade Tracker</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
