--- a/website/templates/tutor_home.html
+++ b/website/templates/tutor_home.html
@@ -8,8 +8,8 @@
     {% for student_id, object in student_grades.items() %}
         <div class="card" style="width: 40rem;border: 3px solid grey; margin: 10px; padding: 5px">
             <div style="text-align: center">
-                <a href="{{url_for('main.edit_student', student_id=student_id)}}">
-                    <h3>{{object.student_name}}</h3>
+                <a class="btn btn-primary" href="{{url_for('main.edit_student', student_id=student_id)}}">
+                    {{object.student_name}}
                 </a>
             </div>
             <canvas id="chart-{{student_id}}">
