--- a/website/templates/create_module.html
+++ b/website/templates/create_module.html
@@ -1,21 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-    <h2>Create Module</h2>
-    <form method="POST" action="{{ url_for('main.create_module') }}">
-        {{ form.hidden_tag() }}
-        <div class="mb-3">
-            <div class="form-label">
-                {{form.module_name.label}}
+    <div class="container">
+        <h2>Create Module</h2>
+        <form method="POST" action="{{ url_for("main.create_module") }}">
+            {{ form.hidden_tag() }}
+            <div class="mb-3">
+                <div class="form-label">{{ form.module_name.label }}</div>
+                {{ form.module_name(class="validate") }}
+                {% if form.module_name.errors %}<span>{{ form.module_name.errors[0] }}</span>{% endif %}
             </div>
-            {{ form.module_name(class="validate") }}
-            {% if form.module_name.errors %}
-            <span>{{ form.module_name.errors[0] }} </span>
-            {% endif %}
-        </div>
-        <div class="input-field">
-            <button type="submit">Create</button>
-        </div>
-    </form>
-</div>
+            <div class="input-field">
+                <button type="submit">Create</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
