--- a/website/templates/tutor_home.html
+++ b/website/templates/tutor_home.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 style="text-align: center">Welcome {{tutor_name}}!</h1>
-<div class="d-flex flex-wrap justify-content-center">
-    <script >
-        let ctx
-    </script>
-    {% for student_id, object in student_grades.items() %}
-        <div class="card" style="width: 40rem;border: 3px solid grey; margin: 10px; padding: 5px">
-            <div style="text-align: center">
-                <a class="btn btn-primary" href="{{url_for('main.edit_student', student_id=student_id)}}">
-                    {{object.student_name}}
-                </a>
-            </div>
-            <canvas id="chart-{{student_id}}">
-                <script>
+    <h1 style="text-align: center">Welcome {{ tutor_name }}!</h1>
+    <div class="d-flex flex-wrap justify-content-center">
+        <script>let ctx</script>
+        {% for student_id, object in student_grades.items() %}
+            <div class="card"
+                 style="width: 40rem;
+                        border: 3px solid grey;
+                        margin: 10px;
+                        padding: 5px">
+                <div style="text-align: center">
+                    <a class="btn btn-primary"
+                       href="{{ url_for('main.edit_student', student_id=student_id) }}">{{ object.student_name }}</a>
+                </div>
+                <canvas id="chart-{{ student_id }}">
+                    <script>
                     console.log('module names: ', {{object.module_names | safe}})
                     console.log('module grades: ', {{object.module_grades}})
                     ctx = document.getElementById('chart-{{student_id}}')
@@ -35,9 +36,9 @@
                             }
                         }
                     })
-                </script>
-            </canvas>
-        </div>
-    {% endfor %}
-</div>
+                    </script>
+                </canvas>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
