--- a/website/templates/edit_student.html
+++ b/website/templates/edit_student.html
@@ -40,6 +40,8 @@
                 </div>
             </div>
             <div class="card" style="padding: 2rem">
+                {% if success_message %}<div class="alert alert-success" role="alert">{{ success_message }}</div>{% endif %}
+                {% if error_message %}<div class="alert alert-danger" role="alert">{{ error_message }}</div>{% endif %}
                 <h5 class="card-title">Add / Update Grade</h5>
                 <form method="POST"
                       action="{{ url_for('main.edit_student', student_id=student_id) }}">
