--- a/website/templates/tutor_home.html
+++ b/website/templates/tutor_home.html
@@ -2,21 +2,20 @@
 {% block content %}
     <h1 style="text-align: center">Welcome {{ tutor_name }}!</h1>
     <div class="d-flex flex-wrap justify-content-center">
-        <script>let ctx</script>
-        {% for student_id, object in student_grades.items() %}
-            <div class="card"
-                 style="width: 40rem;
-                        border: 3px solid grey;
-                        margin: 10px;
-                        padding: 5px">
-                <div style="text-align: center">
-                    <a class="btn btn-primary"
-                       href="{{ url_for('main.edit_student', student_id=student_id) }}">{{ object.student_name }}</a>
-                </div>
-                <canvas id="chart-{{ student_id }}">
-                    <script>
-                    console.log('module names: ', {{object.module_names | safe}})
-                    console.log('module grades: ', {{object.module_grades}})
+        {% if student_grades %}
+            <script>let ctx</script>
+            {% for student_id, object in student_grades.items() %}
+                <div class="card"
+                     style="width: 40rem;
+                            border: 3px solid grey;
+                            margin: 10px;
+                            padding: 5px">
+                    <div style="text-align: center">
+                        <a class="btn btn-primary"
+                           href="{{ url_for('main.edit_student', student_id=student_id) }}">{{ object.student_name }}</a>
+                    </div>
+                    <canvas id="chart-{{ student_id }}">
+                        <script>
                     ctx = document.getElementById('chart-{{student_id}}')
                     new Chart(ctx, {
                         type: 'bar',
@@ -36,9 +35,12 @@
                             }
                         }
                     })
-                    </script>
-                </canvas>
-            </div>
-        {% endfor %}
+                        </script>
+                    </canvas>
+                </div>
+            {% endfor %}
+        {% else %}
+            <a class="btn btn-primary" href="{{ url_for("main.create_student") }}">Create Student</a>
+        {% endif %}
     </div>
 {% endblock %}
