--- a/website/templates/edit_student.html
+++ b/website/templates/edit_student.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="container">
-        <h1 style="text-align: center">{{ student_name }}</h1>
+        <div style="text-align: center">
+            <h1 style="margin: auto; display: inline">{{ student_name }}</h1>
+            <a class="link-secondary"
+               href="{{ url_for('main.edit_course', course_id=student_course.course_id) }}">({{
+                student_course.course_name
+            }})</a>
+        </div>
         <div class="d-flex flex-wrap justify-content-evenly">
             <div>
                 <div class="card" style="padding: 1rem; margin-bottom: 1rem">
