--- a/website/templates/edit_student.html
+++ b/website/templates/edit_student.html
@@ -7,6 +7,11 @@
                href="{{ url_for('main.edit_course', course_id=student_course.course_id) }}">({{
                 student_course.course_name
             }})</a>
+            /
+            <small>
+                <a class="link-secondary"
+                   href="{{ url_for('main.edit_student_course', student_id=student_id) }}">Edit Course</a>
+            </small>
         </div>
         <div class="d-flex flex-wrap justify-content-evenly">
             <div>
