Add Admin ability to view and delete tutors

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,10 +34,10 @@
                         </li>
                         {% if current_user.is_admin %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for("main.create_tutor") }}">Create Tutor</a>
+                                <a class="nav-link" href="{{ url_for("main.create_course") }}">Create Course</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for("main.create_course") }}">Create Course</a>
+                                <a class="nav-link" href="{{ url_for("main.view_tutors") }}">View Tutors</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -52,6 +52,23 @@
             </div>
         </nav>
         <div class="container-fluid">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if
+                messages %}
+                {% for category, message in messages %}
+                    {% if category ==
+                        'error' %}
+                        <div class="alert alert-danger alter-dismissable fade show" role="alert">
+                            {{ message }}
+                        </div>
+                    {% else %}
+                        <div class="alert alert-success alter-dismissable fade show" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
             {% block content %}{% endblock %}
         </div>
     </body>
