--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Import javascript modules for styling and graphs-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
               rel="stylesheet"
               integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -27,11 +28,13 @@
              style="margin-bottom: 1rem">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ url_for("main.home") }}">Grade Tracker</a>
+                <!--Only show subpages of website when a user is logged in-->
                 {% if current_user.is_authenticated %}
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for("main.create_student") }}">Create Student</a>
                         </li>
+                        <!--Show more links for an admin-->
                         {% if current_user.is_admin %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for("main.create_course") }}">Create Course</a>
@@ -54,6 +57,7 @@
                 {% endif %}
             </div>
         </nav>
+        <!--Used to display flash() from Flask-->
         <div class="container-fluid">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if
