--- a/website/templates/edit_course.html
+++ b/website/templates/edit_course.html
@@ -3,6 +3,7 @@
     <div class="container">
         <h2 style="margin-top: 1rem">Course: {{ course_name }}</h2>
         <div style="display: flex; flex-flow: row wrap; column-gap: 2rem">
+            <!-- Not the clearest UI, but display all the modules in the database, so the user can reference this when adding module to course-->
             <div class="card" style="padding: 1rem">
                 <h5 style="margin: auto">All Modules</h5>
                 <table class="table" style="max-width: 30rem">
@@ -23,6 +24,7 @@
                     <a class="btn btn-dark" href="{{ url_for("main.create_module") }}">Create module</a>
                 </div>
             </div>
+            <!-- Display all modules currently in the course, in/with their order-->
             <div class="card" style="padding: 1rem">
                 <h5 style="margin-left: auto; margin-right: auto">Course's Modules</h5>
                 <table class="table" style="max-width: 30rem">
@@ -42,6 +44,7 @@
                     {% endfor %}
                 </table>
             </div>
+            <!--Form for adding/updating modules in course-->
             <div class="card" style="padding: 1rem">
                 <form method="POST"
                       action="{{ url_for('main.edit_course', course_id=course_id) }}">
